2020-08-15 Marek M. Cel <marekcel@marekcel.pl>
    
    * data references restored
    
    * freezing position, attitude and velocity integration



2020-08-09 Marek M. Cel <marekcel@marekcel.pl>
    
    * landing gear changes, external wheel model used
    
    * water reflections
    
    * HUD default color changed
    
    * static friction



2020-08-01 Marek M. Cel <marekcel@marekcel.pl>
    
    * n-element dynamic allocated vector class
    
    * wheel model moved to its own class
    
    * variable size aircraft state vector
    
    * CGI entities



2020-07-25 Marek M. Cel <marekcel@marekcel.pl>
    
    * AW101, F-35A and R44 FDM
    
    * gross weight calculations in GUI
    
    * intersections (ground reactions and collisions detection) fix
    
    * X/F and X/H FDM
    
    * test FDM removed
    
    * aircraft shadows



2020-07-18 Marek M. Cel <marekcel@marekcel.pl>
    
    * CMake updated to building on Ubuntu 20.04 with OpenSceneGraph 3.6.4 and Qt 5.12.8
    
    * HUD fonts set due to memory leak
    
    * unit tests



2020-07-12 Marek M. Cel <marekcel@marekcel.pl>
    
    * building on Ubuntu 20.04 with OpenSceneGraph 3.6.4 and Qt 5.12.8
    
    * splash screen



2020-07-11 Marek M. Cel <marekcel@marekcel.pl>
    
    * OpenSceneGraph-Qt integration without using osgQt library



2020-07-04 Marek M. Cel <marekcel@marekcel.pl>
    
    * time statistics
    
    * rotor blade renaming
    
    * screen saver inhibition
    
    * unit tests



2020-06-21 Marek M. Cel <marekcel@marekcel.pl>
    
    * dpkg config files



2020-06-20 Marek M. Cel <marekcel@marekcel.pl>
    
    * increased number of fuel tanks
    
    * C-130 fuel tanks
    
    * G1000 overspeed indication fix
    
    * axes tuning coefficients
    
    * dpkg making scripts



2020-06-14 Marek M. Cel <marekcel@marekcel.pl>
    
    * replaying initialization fixed



2020-05-24 Marek M. Cel <marekcel@marekcel.pl>
    
    * CMake fix for use selective Qt4 or Qt5