@@ -1,3 +1,9 @@
+2020-08-16 Marek M. Cel <marekcel@marekcel.pl>
+    
+    * intersections error fix
+
+
+
 2020-08-15 Marek M. Cel <marekcel@marekcel.pl>
     
     * data references restored
